tests/rosetta/out/C/base64-decode-data.error
cc: exit status 1
/tmp/base64-decode-data.c: In function ‘parseIntStr’:
/tmp/base64-decode-data.c:139:11: error: request for member ‘len’ in something not a structure or union
  139 |   if ((str.len > 0 && tmp2 == "-")) {
      |           ^
/tmp/base64-decode-data.c:156:18: error: request for member ‘len’ in something not a structure or union
  156 |   while ((i < str.len)) {
      |                  ^
